--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <table id="planets">
     <tr>
       <th></th>
-      <th>Planet 1</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
+      <th>Earth</th>
+      <th>Moon</th>
+      <th>Mars</th>
+      <th>Jupiter</th>
     </tr>
     <tr>
       <td>Images of ??</td>
-      <td><img src="images/planet_1.png" alt="?"></td>
-      <td><img src="images/planet_2.png" alt="?"></td>
-      <td><img src="images/planet_3.png" alt="?"></td>
-      <td><img src="images/planet_4.png" alt="?"></td>
+      <td><img src="images/planet_1.png" alt="Earth"></td>
+      <td><img src="images/planet_2.png" alt="Moon"></td>
+      <td><img src="images/planet_3.png" alt="Mars"></td>
+      <td><img src="images/planet_4.png" alt="Jupiter"></td>
     </tr>
     <tr>
       <td>Fact #1</td>
