--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </tr>
     <tr>
       <td>Images of ??</td>
-      <td><img src="images/planet_1.png" alt="Earth"></td>
-      <td><img src="images/planet_2.png" alt="Moon"></td>
-      <td><img src="images/planet_3.png" alt="Mars"></td>
-      <td><img src="images/planet_4.png" alt="Jupiter"></td>
+      <td><img src="media/planet_1.png" alt="Earth"></td>
+      <td><img src="media/planet_2.png" alt="Moon"></td>
+      <td><img src="media/planet_3.png" alt="Mars"></td>
+      <td><img src="media/planet_4.png" alt="Jupiter"></td>
     </tr>
     <tr>
       <td>Fact #1</td>
