--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <th>Jupiter</th>
     </tr>
     <tr>
-      <td>Images of Planets</td>
+      <td>Planets</td>
       <td><img src="media/planet_1.png" alt="Earth"></td>
       <td><img src="media/planet_2.png" alt="Moon"></td>
       <td><img src="media/planet_3.png" alt="Mars"></td>
