added names of each row

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <td><img src="media/planet_4.png" alt="Jupiter"></td>
     </tr>
     <tr>
-      <td>Fact #1</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Mass (10<sup>24</sup>kg)</td>
+      <td>Gravity (kg/m<sup>3</sup>)</td>
+      <td>Length of Day (Hours)</td>
+      <td>Distance from Sun (10<sup>6</sup>km)</td>
+      <td>Mean Temperature (C)</td>
     </tr>
     <tr>
       <td>Fact #2</td>
