--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
     </tr>
     <tr>
       <td>Mass (10<sup>24</sup>kg)</td>
+      <td>..</td>
+      <td>00</td>
+      <td>99</td>
+      <td>88</td>
+    </tr>
+    <tr>
       <td>Gravity (kg/m<sup>3</sup>)</td>
-      <td>Length of Day (Hours)</td>
+      <td>???</td>
+      <td>???</td>
+      <td>???</td>
+      <td>???</td>
+    </tr>
+    <tr>
+      <td>Length of Day (Hours)3</td>
+      <td>???</td>
+      <td>???</td>
+      <td>???</td>
+      <td>???</td>
+    </tr>
+    <tr>
       <td>Distance from Sun (10<sup>6</sup>km)</td>
+      <td>???</td>
+      <td>???</td>
+      <td>???</td>
+      <td>???</td>
+    </tr>
+    <tr>
       <td>Mean Temperature (C)</td>
-    </tr>
-    <tr>
-      <td>Fact #2</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #3</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #4</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-    </tr>
-    <tr>
-      <td>Fact #5</td>
       <td>???</td>
       <td>???</td>
       <td>???</td>
