--- a/index.html
+++ b/index.html
@@ -24,52 +24,52 @@
     </tr>
     <tr>
       <td>Mass (10<sup>24</sup>kg)</td>
-      <td>..</td>
-      <td>00</td>
-      <td>99</td>
-      <td>88</td>
+      <td>5.97</td>
+      <td>0.073</td>
+      <td>0.642</td>
+      <td>1898</td>
     </tr>
     <tr>
       <td>Gravity (kg/m<sup>3</sup>)</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>9.8</td>
+      <td>1.6</td>
+      <td>3.7</td>
+      <td>23.1</td>
     </tr>
     <tr>
-      <td>Length of Day (Hours)3</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Length of Day (Hours)</td>
+      <td>24.0</td>
+      <td>708.7</td>
+      <td>24.7</td>
+      <td>9.9</td>
     </tr>
     <tr>
       <td>Distance from Sun (10<sup>6</sup>km)</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>149.6</td>
+      <td>0.384</td>
+      <td>228.0</td>
+      <td>778.5</td>
     </tr>
     <tr>
       <td>Mean Temperature (C)</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>15</td>
+      <td>-20</td>
+      <td>-65</td>
+      <td>-110</td>
     </tr>
     <tr>
-      <td>Fact #6</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Escape Velocity (km/s)</td>
+      <td>11.2</td>
+      <td>2.4</td>
+      <td>5.0</td>
+      <td>59.5</td>
     </tr>
     <tr>
-      <td>Fact #7</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Orbital Eccentricity</td>
+      <td>0.017</td>
+      <td>0.055</td>
+      <td>0.094</td>
+      <td>0.049</td>
     </tr>
   </table>
 </body>
