--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Planetary Fact Sheet</h1>
+  <h1 id="Title">Planetary Fact Sheet.</h1>
   <table id="planets">
     <tr>
       <th></th>
